# julearn

./: .buildinfo  .codespellrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  Makefile  README.md  Untitled.ipynb  api.html  codecov.yml  contributing.html  dev-requirements.txt  docs-requirements.txt  genindex.html  hyperparameters.html  ignore_words.txt  index.html  input.html  installation.html  maintaining.html  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  steps.html  test-requirements.txt  text.txt  tox.ini  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.yaml  feature_request.md
.github/workflows/: check-stale.yml  ci-docs.yml  ci.yml  docs-preview.yml  docs.yml  lint.yml  publish.yml  pypi.yml
_downloads/2b703a4f23fbc259c04300946f6cd08e/: run_hyperparameter_tuning.ipynb
_downloads/4cc9a0df184bac85bb17fd20526d2807/: run_simple_binary_classification.ipynb
_downloads/6742466d411c3fb8bd327a899a507e98/: run_hyperparameter_tunning.py
_downloads/6813d4b623475cb68d32b5f1a1052c8e/: plot_groupcv_inspect_svm.ipynb
_downloads/6dea425e076852bbc377c32b7777ddb6/: plot_groupcv_inspect_svm.py
_downloads/7044a9ca2d24b8ebf55c5bfbbc0a699f/: plot_groupcv_inspect_svm.py
_sources/: api.rst.txt  hyperparameters.rst.txt  index.rst.txt  input.rst.txt  installation.rst.txt  pipeline.rst.txt
auto_examples/: index.html  plot_groupcv_inspect_svm.html  plot_inspect_random_forest.html  run_simple_binary_classification.html  sg_execution_times.html
docs/: 01_index.rst  02_getting_started.rst  Makefile  advanced.rst  api.rst  available_pipeline_steps.rst  conf.py  configuration.rst  contributing.rst  faq.rst  getting_started.rst  hyperparameters.rst  index.rst  input.rst  installation.rst  links.inc  maintaining.rst  pipeline.rst  poly.py  redirect.html  scoring.rst  sg_execution_times.rst  steps.rst  whats_new.rst
docs/api/: base.rst  (+11 more)
examples/: README.rst  example.ipynb  simple_binary_classification.py
julearn/: .travis.yml  __init__.py  _version.py  api.py  base.py  config.py  conftest.py  create_pipeline.py  handle_inputs.py  model_selection.py  pipeline.py  prepare.py  scoring.py  stats.py  user_functions.py  utils.py
main/: .buildinfo  advanced.html  api.html  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  objects.inv  pipeline.html  py-modindex.html  scoring.html  search.html  searchindex.js  sg_execution_times.html  steps.html  whats_new.html
scratch/: dev_des.py
v0.2.0/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  pipeline.html  py-modindex.html  search.html  searchindex.js  steps.html
v0.2.1/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  pipeline.html  py-modindex.html  search.html  searchindex.js  steps.html
v0.2.2/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  pipeline.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  steps.html
v0.2.3/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  objects.inv  pipeline.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  steps.html
v0.2.4/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  pipeline.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  steps.html
v0.2.5/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  objects.inv  pipeline.html  py-modindex.html  scoring.html  search.html  searchindex.js  sg_execution_times.html  steps.html  whats_new.html
v0.2.7/: .buildinfo  api.html  contributing.html  genindex.html  hyperparameters.html  index.html  input.html  installation.html  maintaining.html  objects.inv  pipeline.html  py-modindex.html  scoring.html  search.html  searchindex.js  sg_execution_times.html  steps.html  whats_new.html
v0.3.0/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.3.1/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.3.2/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.3.3/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.3.4/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html
v0.3.5/: .buildinfo  available_pipeline_steps.html  configuration.html  contributing.html  examples.html  faq.html  genindex.html  getting_started.html  index.html  maintaining.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  whats_new.html
(+12226 files in other folders)
